Changes after review
1) Pom.xml structure changed.
2) Class server changed.